# deploy-impact-22-openedu-b

./: .gitignore  CONTRIBUTORS.md  README.md  docker-compose.yaml  playground.py
db/: init_docker_postgres.sh
docs/: README.md
docs/backend/: README.md  basic_searc_moderation.webm
docs/data_science/: README.md
docs/data_science/NLP/: New view.csv  OpenEduB - first draft NLP.py  README.md
docs/ontology/: overview.md
docs/presentation/: external-link.txt
docs/ux-ui/: README.md
es_search_service/: go.mod
es_search_service/cmd/: main.go
es_search_service/service/: es.go  server.go
ontology/: README.md  open_edu-b-ontology.owl  overview.md
pg_to_es/: .gitignore  go.mod  go.sum
pg_to_es/service/: pg.go
src/dev_ops/: Dockerfile_GraphDB  Dockerfile_Nutch  docker-compose.yaml
src/es_search_service/: go.sum
src/es_to_pg_with_nlp/: go.mod  go.sum
src/frontend/site_emulation_service/: pyproject.toml
src/frontend/site_emulation_service/service/: __main__.py  config.py  storage.py
src/gs_to_pg/: .gitignore
src/gs_to_pg/cmd/: main.go  (+2 more)
src/internet_to_pg/: go.mod  go.sum
src/moderation_form_service/: .gitignore  __main__.py  app.py  storage.py
src/ontology/: open_edub_ontology.owl
src/owl_reader/: .gitignore  go.mod  onto.owl
src/pg_to_es/: go.sum
src/site_emulation_service/: Dockerfile  pyproject.toml
src/ux-ui/: external-link.txt
test/: README.md  docker-compose.yaml
test/config/: index-writers.xml  run.sh
test/db/: sito_project.sql
test/openedu1-config/: ontop_jdbc.properties
test/tmp/: Dockerfile_Nutch  docker-compose.yaml
(+53 files in other folders)
